@@ -127,8 +127,10 @@ if ($access)
 					}
 				}
 
-				redirect("listhtmlblobs.php");
-				return;
+				if (!isset($_POST['apply'])) {
+					redirect('listhtmlblobs.php');
+					return;
+				}
 			}
 			else
 			{
@@ -234,6 +236,7 @@ else
 					<input type="hidden" name="owner_id" value="<?php echo $owner_id ?>" />
 				<?php } ?>
 				<input type="submit" name="cancel" value="<?php echo lang('cancel')?>" class="pagebutton" onmouseover="this.className='pagebuttonhover'" onmouseout="this.className='pagebutton'" />
+				<input type="submit" name="apply" value="<?php echo lang('apply')?>" class="pagebutton" onmouseover="this.className='pagebuttonhover'" onmouseout="this.className='pagebutton'" />
 			</p>
 		</div>
 	</form>
